--- a/accounts/static/css/style.css
+++ b/accounts/static/css/style.css
@@ -1,5 +1,4 @@
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;1,200&family=Poppins:ital,wght@0,100;1,100;1,200&family=Roboto:ital,wght@1,300&display=swap');
 
 * {
     margin: 0;
