--- a/accounts/templates/accounts/index.html
+++ b/accounts/templates/accounts/index.html
@@ -5,6 +5,32 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <style>
+        * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: 'Montserrat', sans-serif;
+    font-family: 'Poppins', sans-serif;
+    font-family: 'Roboto', sans-serif;
+}
+
+.profile {
+    width: 200px;
+    height: 200px;
+    border-radius: 100px;
+}
+
+.info {
+    width: 50%;
+    height: 50;
+    margin: 0 auto;
+    text-align: center;
+}
+    </style>
 </head>
 <body>
     <section class="info">
