--- a/accounts/static/css/style.css
+++ b/accounts/static/css/style.css
@@ -17,10 +17,17 @@ body {
     height: 200px;
     border-radius: 100px;
 }
+h1, p {
+    padding: 10px;
+}
+
+p {
+    font-weight: bold;
+}
 
 .info {
     width: 50%;
     height: 50;
-    margin: 0 auto;
+    margin: 50px auto 0;
     text-align: center;
 }
